fixed css margins for forecast-info and forecast title to look good on mobile

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -80,13 +80,13 @@ h4 {
     padding-top: 20px;
     padding: 10px;
     margin-right: auto;
-    margin-left: 10px;
+    margin-left: 30px;
     margin-bottom: 10px;
 }
 
 .forecast-title {
     margin-top: 50px;
-    margin-left: 10px;
+    margin-left: 30px;
     margin-right: auto;
     padding-top: 10px;
     padding-bottom: 10px;
